fixing layout and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,31 @@
 :root {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif, 'Arial Narrow', Arial, sans-serif, Courier, monospace;
+    --card-height: 40vw;
+    --card-margin: 4vw;
+    --card-top-offset: 1em;
+    --numcards: 4;
+    --outline-width: 0px;
+}
+
+#cards {
+    padding: 2%;
+}
+
+#card_1 {
+
+}
+
+#card_2 {
+
+}
+
+#card_3 {
+
+}
+
+#card_4 {
+
+
 }
 
 header {
@@ -7,9 +33,8 @@ header {
     /* background-color: green; */
     border-style:none;
     border-bottom: 12px;
-    border-radius: 500px 10px 10px 10px;
-    margin-bottom: ;
-    
+    border-radius: 500px 50px 50px 50px;
+    margin-bottom: 100px;
 }
 
 section {
@@ -20,16 +45,27 @@ section {
 
 h1 {
     flex: 1 0 0%;
+    text-decoration: overline;
     position: absolute;
     transform: rotate(-45deg);
-    top: 65px;
+    top: 80px;
     left: 5px;
-    color: #5ed41abe;
+    color: #BC3908;
+}
+
+h2 {
+    flex: 1 0 0%;
+    text-decoration: overline;
+    position: absolute;
+    transform: rotate(-45deg);
+    color: #BC3908;
 }
 
 .row {
     position: absolute;
-    display: inline;
+    display: block;
+    /* This helps keep the background picture from stretching the container size */
+    max-width: 1890px;
 }
 
 .col {
@@ -55,5 +91,49 @@ h1 {
     padding: 5px 5px;
     margin: 5px;
     border-radius: 40px 10px 40px 10px;
-    color: brown;
+    color: #BC3908;
 }
+
+.arrow-up {
+    position: absolute;
+    top: 23px;
+    left: 0px;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 50px solid #BC3908;
+    border-radius: 25px 25px 25px 25px;
+    transform: rotate(-45deg);
+  }
+
+.card {
+    position: sticky;
+
+}
+
+.content_1 {
+    display: block;
+    background-color: #BC3908;
+}
+
+.content_2 {
+    display: block;
+}
+
+.content_3 {
+    display: block;
+}
+
+.content_4 {
+    display: block;
+}
+
+
+  /* @media screen and (max-width: 500px) {
+    header {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    header-right {
+      float: none;
+    } */
